Ajout services directeur labo(operations.services)