@@ -1,12 +1,19 @@
 package com.estf.edoctorat.controllers;
 
 
+import com.estf.edoctorat.config.CustomUserDetails;
 import com.estf.edoctorat.dto.SujetDto;
 import com.estf.edoctorat.mappers.SujetDtoMapper;
 import com.estf.edoctorat.models.PermissionModel;
+import com.estf.edoctorat.models.ProfesseurModel;
+import com.estf.edoctorat.models.SujetModel;
+import com.estf.edoctorat.models.UserModel;
+import com.estf.edoctorat.services.ProfesseurService;
 import com.estf.edoctorat.services.SujetService;
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -18,20 +25,35 @@ import java.util.stream.Collectors;
 import static java.util.stream.Collectors.toList;
 
 @RestController
-@RequestMapping("/api/sujetslabo/")
+@RequestMapping("/api")
 
 public class SujetController {
 
     @Autowired
     private SujetService sujetService;
 
-    @GetMapping
+    @Autowired
+    private ProfesseurService professeurService;
+
+
+    @GetMapping("/sujetslabo")
     @ResponseBody
-    public List<SujetDto> getSujetsLabo() {
-        return sujetService.getAll()
-                .stream()
-                .map( SujetDtoMapper::toDto )
-                .collect(toList());
+    public List<SujetDto> getSujetsLabo(HttpServletRequest request) {
+
+        UserDetails userDetails = (UserDetails) request.getAttribute("user");
+        UserModel user = ((CustomUserDetails) userDetails).getUser();
+
+        long idLab = professeurService.getByUser(user).get().getLabo_id();
+
+        List<ProfesseurModel> listProfLabo = professeurService.getProfesseursByLabID(idLab);
+
+        List<SujetDto> listSujetLabo = listProfLabo.stream()
+                .flatMap( prof -> sujetService.getSujetsByProfID(prof.getId()).
+                        stream().map(SujetDtoMapper::toDto))
+                .toList();
+
+        return listSujetLabo;
+
     }
 
 
